# VIO_course

./: .gitignore  README.md
ch_1/: CMakeLists.txt  eigen_rotation.cpp
ch_1_rotationupdate/: CMakeLists.txt
ch_2_viodatasimulation/: CMakeLists.txt
ch_2_viodatasimulation/main/: gener_alldata.cpp
ch_2_viodatasimulation/python_tool/: draw_points.py  draw_trajectory.py
ch_2_viodatasimulation/src/: imu.cpp  imu.h  param.cpp  param.h  utilities.cpp  utilities.h
ch_3_gaussnewton/: CMakeLists.txt  main_gaussnewton.cpp
ch_3_lmsolver/app/: CurveFitting.cpp  draw_data_mu.py
ch_3_lmsolver/backend/: backend.h  edge.cc  edge.h  eigen_types.h  problem.cc  problem.h  vertex.cc  vertex.h
ch_4_nullspace_test/: hessian_nullspace_test.cpp
ch_5_BA_schur/app/: TestMonoBA.cpp
ch_5_BA_schur/backend/: edge.cc  edge.h  edge_imu.h  edge_reprojection.cc  edge_reprojection.h  eigen_types.h  problem.cc  problem.h  vertex.cc  vertex.h  vertex_inverse_depth.h  vertex_motion.h  vertex_point_xyz.h  vertex_pose.cc  vertex_pose.h
ch_7_VINS_sys/config/: .simulation_config.yaml.swo  .simulation_config.yaml.swp  simulation_config.yaml
ch_7_VINS_sys/src/: System.cpp
ch_7_VINS_sys/test/: run_euroc.cpp  run_simulation.cpp
